--- a/pickleball-training.html
+++ b/pickleball-training.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pickleball Training Schedule</title>
+    <title>Pickleball Training Schedule Rathdrum</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Add pako for compression/decompression -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pako/2.1.0/pako.min.js"></script>
