--- a/pickleball-training.html
+++ b/pickleball-training.html
@@ -82,7 +82,7 @@
 
     <div class="container mx-auto p-0 bg-white rounded-none md:rounded-xl shadow-lg w-full">
         <div class="p-4 md:p-6">
-            <h1 class="text-3xl font-bold text-center mb-6 text-gray-800">Pickleball Training Schedule</h1>
+            <h1 class="text-3xl font-bold text-center mb-6 text-gray-800">Pickleball Training Schedule Test</h1>
         
             <!-- Tab Buttons -->
             <div class="flex border-b border-gray-200 mb-6">
