--- a/pickleball-training.html
+++ b/pickleball-training.html
@@ -76,6 +76,12 @@
                 border-bottom-right-radius: 0.5rem;
             }
         }
+        /* Style for editable name field */
+        .editable-name:focus {
+            outline: 2px solid #3b82f6;
+            border-radius: 0.25rem;
+            background-color: #e3f2fd;
+        }
     </style>
 </head>
 <body class="bg-gray-100 min-h-screen flex flex-col items-center justify-center">
@@ -276,6 +282,13 @@
                     params.set('et', endTimeInput.value);
                     const newUrl = `${window.location.origin}${window.location.pathname}?${params.toString()}`;
                     shareUrlInput.value = newUrl;
+                    
+                    // Update the browser's URL without reloading the page
+                    try {
+                        window.history.pushState({}, '', newUrl);
+                    } catch (e) {
+                        console.error('Failed to update browser history:', e);
+                    }
                 } catch (e) {
                     console.error('Error generating shareable URL:', e);
                 }
@@ -285,7 +298,7 @@
             const addPlayer = () => {
                 const name = playerNameInput.value.trim();
                 const defaultStartTime = startTimeInput.value;
-                const defaultEndTime = endTimeInput.value;
+                const defaultEndTime = endTimeInput.getElementById('endTime').value;
                 if (name) {
                     players.push({ name, level: 1, startTime: defaultStartTime, endTime: defaultEndTime, restCount: 0, playCount: 0 });
                     playerNameInput.value = '';
@@ -316,7 +329,9 @@
                     const originalIndex = players.findIndex(p => p.name === player.name);
                     row.innerHTML = `
                         <td class="px-4 py-2" data-label="No.">${index + 1}</td>
-                        <td class="px-4 py-2" data-label="Player Name">${player.name}</td>
+                        <td class="px-4 py-2" data-label="Player Name">
+                            <span contenteditable="true" class="editable-name" data-index="${originalIndex}">${player.name}</span>
+                        </td>
                         <td class="px-4 py-2" data-label="Skill Level">
                             <select class="player-level-select p-1 border border-gray-300 rounded-md" data-index="${originalIndex}">
                                 <option value="1" ${player.level === 1 ? 'selected' : ''}>Level 1</option>
@@ -363,6 +378,16 @@
                 }
                 updateUrlWithCurrentState(); // Update URL after any player detail changes
             });
+
+            // Add an event listener to update player name on blur (when the user clicks away)
+            playerTableBody.addEventListener('blur', (e) => {
+                const target = e.target;
+                if (target.classList.contains('editable-name')) {
+                    const index = target.getAttribute('data-index');
+                    players[index].name = target.textContent.trim();
+                    updateUrlWithCurrentState();
+                }
+            }, true); // Use capture phase to catch the event before other listeners
 
             // Sync all players' start times with the main start time
             startTimeInput.addEventListener('change', (e) => {
