Refactor pickleball-training.html to use local scripts and add notification popup for URL copy confirmation

--- a/pickleball-training.html
+++ b/pickleball-training.html
@@ -233,9 +233,9 @@
                 <div class="flex flex-col md:flex-row md:items-center justify-between mb-4">
                     <h2 class="text-2xl font-semibold text-gray-700 mb-2 md:mb-0">Training Schedule</h2>
                     <div class="flex flex-col sm:flex-row gap-2 w-full md:w-auto mt-2 md:mt-0">
-                        <input type="text" id="shareUrlInput" class="flex-1 p-2 border border-gray-300 rounded-md bg-white focus:outline-none text-sm truncate" readonly placeholder="Shareable URL will appear here...">
+                        <input type="hidden" id="shareUrlInput">
                         <button id="copyUrlBtn" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-md transition-colors duration-200 flex-shrink-0">
-                            Copy URL
+                            Share Schedule
                         </button>
                     </div>
                 </div>
