--- a/pickleball-training.html
+++ b/pickleball-training.html
@@ -296,7 +296,7 @@
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1"></path>
                         </svg>
-                        Copy Tiny URL (Coming Soon)
+                        Copy Tiny URL
                     </button>
                 </div>
             </div>
@@ -366,6 +366,18 @@
             const copyLongUrlBtn = document.getElementById('copyLongUrlBtn');
             const copyTinyUrlBtn = document.getElementById('copyTinyUrlBtn');
 
+            // Function to create tiny URL using TinyURL API
+            const createTinyUrl = async (longUrl) => {
+                try {
+                    const response = await fetch(`https://tinyurl.com/api-create.php?url=${encodeURIComponent(longUrl)}`);
+                    if (!response.ok) throw new Error('Failed to create tiny URL');
+                    return await response.text();
+                } catch (error) {
+                    console.error('Error creating tiny URL:', error);
+                    return null;
+                }
+            };
+
             // Show modal
             copyUrlBtn.addEventListener('click', (e) => {
                 e.preventDefault();
@@ -409,10 +421,58 @@
                     });
             });
 
-            // Disable tiny URL button for now
-            copyTinyUrlBtn.addEventListener('click', (e) => {
+            // Copy tiny URL functionality
+            copyTinyUrlBtn.addEventListener('click', async (e) => {
                 e.preventDefault();
-                // This will be implemented later
+
+                // Change button text to show loading state
+                const originalText = copyTinyUrlBtn.innerHTML;
+                copyTinyUrlBtn.innerHTML = `
+                    <svg class="w-5 h-5 animate-spin" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
+                        <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
+                        <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
+                    </svg>
+                    Creating Tiny URL...
+                `;
+                copyTinyUrlBtn.disabled = true;
+
+                // Get the current long URL
+                const longUrl = shareUrlInput.value;
+                const tinyUrl = await createTinyUrl(longUrl);
+
+                if (tinyUrl) {
+                    // Copy the tiny URL to clipboard
+                    await navigator.clipboard.writeText(tinyUrl);
+
+                    // Show success notification
+                    const popup = document.getElementById('notificationPopup');
+                    popup.classList.remove('opacity-0', 'translate-y-full');
+                    popup.classList.add('opacity-100', 'translate-y-0');
+
+                    setTimeout(() => {
+                        popup.classList.remove('opacity-100', 'translate-y-0');
+                        popup.classList.add('opacity-0', 'translate-y-full');
+                        // Hide modal after successful copy
+                        shareModal.classList.remove('flex');
+                        shareModal.classList.add('hidden');
+                    }, 2000);
+                } else {
+                    // Show error in the button
+                    copyTinyUrlBtn.innerHTML = `
+                        <svg class="w-5 h-5 text-red-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"></path>
+                        </svg>
+                        Failed to create Tiny URL
+                    `;
+                }
+
+                // Reset button after 3 seconds if there was an error
+                if (!tinyUrl) {
+                    setTimeout(() => {
+                        copyTinyUrlBtn.innerHTML = originalText;
+                        copyTinyUrlBtn.disabled = false;
+                    }, 3000);
+                }
             });
 
             playersTabBtn.addEventListener('click', () => showTab('players'));
