Update player input field and button for improved usability in pickleball training

--- a/pickleball-training.html
+++ b/pickleball-training.html
@@ -169,10 +169,10 @@
                         <label for="balancedTeams" class="font-medium text-gray-700">Prevent Level 2 players from teaming up</label>
                     </div>
                     <h2 class="text-2xl font-semibold mb-4 text-gray-700 mt-6">Add Players</h2>
-                    <div class="flex flex-col md:flex-row gap-4 mb-4 items-center">
-                        <input type="text" id="playerName" placeholder="Enter player name" class="flex-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
-                        <button id="addPlayerBtn" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-md transition-colors duration-200">
-                            Add Player
+                    <div class="flex flex-row gap-4 mb-4 items-center">
+                        <input type="text" id="playerName" placeholder="Enter player name (Press Enter to add)" class="flex-1 p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        <button id="addPlayerBtn" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-md transition-colors duration-200 whitespace-nowrap">
+                            Add
                         </button>
                     </div>
                 </div>
