--- a/pickleball-training.html
+++ b/pickleball-training.html
@@ -321,10 +321,9 @@
             let players = [];
             let scheduleData = [];
             let sortDirection = {}; // To store the sort direction for each column
-            
-            // Get default start and end times from main settings
-            const defaultStartTime = document.getElementById('startTime').value;
-            const defaultEndTime = document.getElementById('endTime').value;
+
+            // List of random names for the "Random" button
+            const randomNames = ["Alice", "Bob", "Charlie", "Diana", "Ethan", "Fiona", "George", "Hannah", "Isaac", "Jasmine", "Kevin", "Laura", "Mike", "Nora", "Oscar", "Penny", "Quinn", "Rachel", "Sam", "Tina"];
             const trainingDateInput = document.getElementById('trainingDate');
             const trainingTitle = document.getElementById('trainingTitle');
 
